k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket_mgt_system
  namespace: ticket-mgt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket_mgt_system
  template:
    metadata:
      labels:
        app: ticket_mgt_system
    spec:
      containers:
        - name: ticket_mgt_system-container
          image: rashed271202/ticket_mgt_system:latest
          ports:
            - containerPort: 8000
          command: ["/bin/sh", "-c"]
          args:
            - |
              python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000
