k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: ticket-mgt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          securityContext:
            runAsUser: 999  # MySQL user in container
            runAsGroup: 999 # MySQL group in container
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
