k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ticket-mgt
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ticket-mgt
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: ticket_mgt_system
  namespace: ticket-mgt
spec:
  selector:
    app: ticket_mgt_system
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
