k8s/mysql-allow-ticket-mgt-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-ticket-mgt-system
  namespace: ticket-mgt
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ticket-mgt-system
      ports:
        - protocol: TCP
          port: 3306
